--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zenn",
   "version": "1.0.0",
-  "description": "",
+  "description": "* [📘 How to use](https://zenn.dev/zenn/articles/zenn-cli-guide) * [📘 Markdown guide](https://zenn.dev/zenn/articles/markdown-guide)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/sloppybook/zenn#readme",
   "dependencies": {
-    "zenn-cli": "^0.1.80"
+    "zenn-cli": "^0.1.162"
   },
   "devDependencies": {
     "textlint": "^11.9.1",
