--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
     "textlint-rule-preset-ja-spacing": "^2.1.1",
     "textlint-rule-preset-ja-technical-writing": "^6.0.0",
     "textlint-rule-spellcheck-tech-word": "^5.0.0"
-  }
+  },
+  "type": "commonjs"
 }
